--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 app:
-  # site: https://count.getloli.com # your website
+  site: https://Moe-Counter.speechless22.repl.co # your website
   port: 3000
 
 db:
